Linkin lisäämisen jälkeen, ennen kategorian lisäämistä

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 		Navigointi:
 		<%= link_to 'Listaa', words_path %>
 		<%= link_to 'Lisää uusi', new_word_path %>
+		<%= link_to 'Linkit', links_path %>
 	</div>
 
 	<%= yield %>
